# BetterShell

./: Cargo.toml  README.md  TODO.md
src/: commands.rs  lib.rs  main.rs
tests/: commands_test.rs  integration_test.rs
