[package]
name = "bettershell"
version = "0.1.0"
authors = ["HannesScript <mail@hannesscript.dev>"]
edition = "2024"
rust-version = "1.91"

[lib]
name = "bettershell"
path = "src/lib.rs"

[[bin]]
name = "bettershell"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"                                # error handling
bytes = "1.11.1"                                  # helps manage buffers
thiserror = "2.0.18"                             # error handling
